util/datetime/y.output

state 0
	$accept: .spec $end 
	items: .    (26)

	@  shift 4
	.  reduce 26 (src line 114)

	spec  goto 1
	unixtime  goto 2
	items  goto 3

state 1
	$accept:  spec.$end 

	$end  accept
	.  error


state 2
	spec:  unixtime.    (1)

	.  reduce 1 (src line 42)


state 3
	spec:  items.    (2)
	items:  items.item 

	T_INTEGER  shift 15
	T_PLUS  shift 23
	T_MINUS  shift 24
	T_MONTHNAME  shift 16
	T_DAYNAME  shift 17
	T_DAYSHIFT  shift 20
	T_RELATIVE  shift 18
	A  shift 26
	P  shift 22
	.  reduce 2 (src line 43)

	o_sign_integer  goto 19
	item  goto 5
	time  goto 6
	iso_8601_time  goto 7
	date  goto 8
	iso_8601_date  goto 9
	iso_8601_date_time  goto 10
	day_or_month  goto 11
	relative  goto 12
	iso_8601_duration  goto 13
	integer  goto 14
	relunits  goto 21
	relunit  goto 25

state 4
	unixtime:  @.o_sign_integer 

	T_INTEGER  shift 28
	T_PLUS  shift 23
	T_MINUS  shift 24
	.  error

	o_sign_integer  goto 27

state 5
	items:  items item.    (27)

	.  reduce 27 (src line 116)


state 6
	item:  time.    (28)

	.  reduce 28 (src line 118)


state 7
	item:  iso_8601_time.    (29)

	.  reduce 29 (src line 120)


state 8
	item:  date.    (30)

	.  reduce 30 (src line 121)


state 9
	item:  iso_8601_date.    (31)
	iso_8601_date_time:  iso_8601_date.T iso_8601_time 

	T  shift 29
	.  reduce 31 (src line 122)


state 10
	item:  iso_8601_date_time.    (32)

	.  reduce 32 (src line 123)


state 11
	item:  day_or_month.    (33)

	.  reduce 33 (src line 124)


state 12
	item:  relative.    (34)

	.  reduce 34 (src line 125)


state 13
	item:  iso_8601_duration.    (35)

	.  reduce 35 (src line 126)


state 14
	item:  integer.    (36)

	.  reduce 36 (src line 127)


15: shift/reduce conflict (shift 43(0), red'n 96(0)) on T_PLUS
15: shift/reduce conflict (shift 35(0), red'n 96(0)) on T_MINUS
 15: reduce/reduce conflict  (red'ns 17 and 96) on T_DAYNAME
15: shift/reduce conflict (shift 39(0), red'n 96(0)) on A
15: shift/reduce conflict (shift 40(0), red'n 96(0)) on P
 15: reduce/reduce conflict  (red'ns 96 and 9) on T_MONTHNAME
state 15
	o_sign_integer:  T_INTEGER.    (17)
	time:  T_INTEGER.ampm o_zone 
	time:  T_INTEGER.: T_INTEGER ampm o_zone 
	time:  T_INTEGER.: T_INTEGER : T_INTEGER ampm o_zone 
	iso_8601_time:  T_INTEGER.zone 
	iso_8601_time:  T_INTEGER.: T_INTEGER o_zone 
	iso_8601_time:  T_INTEGER.: T_INTEGER : T_INTEGER o_zone 
	date:  T_INTEGER./ T_INTEGER 
	date:  T_INTEGER./ T_INTEGER / T_INTEGER 
	date:  T_INTEGER.o_dayqual o_of T_MONTHNAME 
	date:  T_INTEGER.o_dayqual o_of T_MONTHNAME T_INTEGER 
	date:  T_INTEGER.T_MINUS T_MONTHNAME T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER.T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER.T_MINUS T_INTEGER T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER.W T_INTEGER 
	iso_8601_date:  T_INTEGER.T_MINUS W T_INTEGER 
	iso_8601_date:  T_INTEGER.T_MINUS W T_INTEGER T_MINUS T_INTEGER 
	iso_8601_date_time:  T_INTEGER.T T_INTEGER o_zone 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME of T_MONTHNAME 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME of T_INTEGER 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME of T_MONTHNAME T_INTEGER 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME of T_RELATIVE T_MONTHNAME 
	integer:  T_INTEGER.    (96)
	o_dayqual: .    (9)

	$end  reduce 96 (src line 444)
	T_DAYQUAL  shift 38
	T_INTEGER  reduce 96 (src line 444)
	T_PLUS  shift 43
	T_MINUS  shift 35
	T_MONTHNAME  reduce 9 (src line 54)
	T_DAYSHIFT  reduce 96 (src line 444)
	T_RELATIVE  reduce 96 (src line 444)
	T_ZONE  shift 41
	O  reduce 9 (src line 54)
	A  shift 39
	P  shift 40
	:  shift 31
	/  shift 33
	W  shift 36
	T  shift 37
	.  reduce 17 (src line 73)

	sign  goto 42
	ampm  goto 30
	zone  goto 32
	o_dayqual  goto 34

16: shift/reduce conflict (shift 44(0), red'n 58(0)) on T_INTEGER
state 16
	date:  T_MONTHNAME.T_INTEGER o_dayqual 
	date:  T_MONTHNAME.T_INTEGER o_dayqual comma T_INTEGER 
	day_or_month:  T_MONTHNAME.    (58)

	T_INTEGER  shift 44
	.  reduce 58 (src line 307)


state 17
	day_or_month:  T_DAYNAME.o_comma 
	o_comma: .    (4)

	,  shift 47
	.  reduce 4 (src line 47)

	comma  goto 46
	o_comma  goto 45

state 18
	day_or_month:  T_RELATIVE.T_DAYNAME 
	day_or_month:  T_RELATIVE.T_MONTHNAME 
	relunit:  T_RELATIVE.T_OFFSET 
	relunit:  T_RELATIVE.T_DAYS 

	T_MONTHNAME  shift 49
	T_DAYNAME  shift 48
	T_DAYS  shift 51
	T_OFFSET  shift 50
	.  error


state 19
	day_or_month:  o_sign_integer.T_DAYNAME 
	relunit:  o_sign_integer.T_OFFSET 
	relunit:  o_sign_integer.T_DAYS 
	relunit:  o_sign_integer.T_ISOYD 
	relunit:  o_sign_integer.T_ISOHS 
	relunit:  o_sign_integer.M $$80 o_sign_integer W 

	T_DAYNAME  shift 52
	T_DAYS  shift 54
	T_OFFSET  shift 53
	T_ISOYD  shift 55
	T_ISOHS  shift 56
	M  shift 57
	.  error


state 20
	day_or_month:  T_DAYSHIFT.    (67)

	.  reduce 67 (src line 349)


state 21
	relative:  relunits.    (68)
	relative:  relunits.T_AGO 

	T_AGO  shift 58
	.  reduce 68 (src line 355)


state 22
	iso_8601_duration:  P.ymd_units o_t_hms_units 
	iso_8601_duration:  P.t_hms_units 
	iso_8601_duration:  P.T_INTEGER W 

	T_INTEGER  shift 61
	T  shift 63
	.  error

	ymd_units  goto 59
	t_hms_units  goto 60
	ymd_unit  goto 62

state 23
	o_sign_integer:  T_PLUS.T_INTEGER 

	T_INTEGER  shift 64
	.  error


state 24
	o_sign_integer:  T_MINUS.T_INTEGER 

	T_INTEGER  shift 65
	.  error


25: shift/reduce conflict (shift 28(0), red'n 70(0)) on T_INTEGER
25: shift/reduce conflict (shift 23(0), red'n 70(0)) on T_PLUS
25: shift/reduce conflict (shift 24(0), red'n 70(0)) on T_MINUS
25: shift/reduce conflict (shift 68(0), red'n 70(0)) on T_RELATIVE
25: shift/reduce conflict (shift 26(0), red'n 70(0)) on A
state 25
	relunits:  relunit.    (70)
	relunits:  relunit.relunits 

	T_INTEGER  shift 28
	T_PLUS  shift 23
	T_MINUS  shift 24
	T_RELATIVE  shift 68
	A  shift 26
	.  reduce 70 (src line 361)

	o_sign_integer  goto 67
	relunits  goto 66
	relunit  goto 25

state 26
	relunit:  A.T_OFFSET 
	relunit:  A.T_DAYS 

	T_DAYS  shift 70
	T_OFFSET  shift 69
	.  error


state 27
	unixtime:  @ o_sign_integer.    (25)

	.  reduce 25 (src line 106)


state 28
	o_sign_integer:  T_INTEGER.    (17)

	.  reduce 17 (src line 73)


state 29
	iso_8601_date_time:  iso_8601_date T.iso_8601_time 

	T_INTEGER  shift 72
	.  error

	iso_8601_time  goto 71

30: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
30: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
state 30
	time:  T_INTEGER ampm.o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	.  reduce 23 (src line 102)

	sign  goto 42
	zone  goto 74
	o_zone  goto 73

state 31
	time:  T_INTEGER :.T_INTEGER ampm o_zone 
	time:  T_INTEGER :.T_INTEGER : T_INTEGER ampm o_zone 
	iso_8601_time:  T_INTEGER :.T_INTEGER o_zone 
	iso_8601_time:  T_INTEGER :.T_INTEGER : T_INTEGER o_zone 

	T_INTEGER  shift 76
	.  error


state 32
	iso_8601_time:  T_INTEGER zone.    (40)

	.  reduce 40 (src line 144)


state 33
	date:  T_INTEGER /.T_INTEGER 
	date:  T_INTEGER /.T_INTEGER / T_INTEGER 

	T_INTEGER  shift 77
	.  error


state 34
	date:  T_INTEGER o_dayqual.o_of T_MONTHNAME 
	date:  T_INTEGER o_dayqual.o_of T_MONTHNAME T_INTEGER 
	o_of: .    (7)

	O  shift 80
	.  reduce 7 (src line 52)

	of  goto 79
	o_of  goto 78

35: shift/reduce conflict (shift 82(0), red'n 16(0)) on T_INTEGER
state 35
	sign:  T_MINUS.    (16)
	date:  T_INTEGER T_MINUS.T_MONTHNAME T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS.T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS.T_INTEGER T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS.W T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS.W T_INTEGER T_MINUS T_INTEGER 

	T_INTEGER  shift 82
	T_MONTHNAME  shift 81
	W  shift 83
	.  error


state 36
	iso_8601_date:  T_INTEGER W.T_INTEGER 

	T_INTEGER  shift 84
	.  error


state 37
	iso_8601_date_time:  T_INTEGER T.T_INTEGER o_zone 

	T_INTEGER  shift 85
	.  error


state 38
	o_dayqual:  T_DAYQUAL.    (10)
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME 
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME of T_MONTHNAME 
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME of T_INTEGER 
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME of T_MONTHNAME T_INTEGER 
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME of T_RELATIVE T_MONTHNAME 

	T_DAYNAME  shift 86
	.  reduce 10 (src line 54)


state 39
	ampm:  A.M 
	ampm:  A.. M . 

	M  shift 87
	.  shift 88
	.  error


state 40
	ampm:  P.M 
	ampm:  P.. M . 

	M  shift 89
	.  shift 90
	.  error


state 41
	zone:  T_ZONE.    (20)

	.  reduce 20 (src line 85)


state 42
	zone:  sign.T_INTEGER 
	zone:  sign.T_INTEGER : T_INTEGER 

	T_INTEGER  shift 91
	.  error


state 43
	sign:  T_PLUS.    (15)

	.  reduce 15 (src line 70)


state 44
	date:  T_MONTHNAME T_INTEGER.o_dayqual 
	date:  T_MONTHNAME T_INTEGER.o_dayqual comma T_INTEGER 
	o_dayqual: .    (9)

	T_DAYQUAL  shift 93
	.  reduce 9 (src line 54)

	o_dayqual  goto 92

state 45
	day_or_month:  T_DAYNAME o_comma.    (57)

	.  reduce 57 (src line 302)


state 46
	o_comma:  comma.    (5)

	.  reduce 5 (src line 48)


state 47
	comma:  ,.    (3)

	.  reduce 3 (src line 45)


state 48
	day_or_month:  T_RELATIVE T_DAYNAME.    (59)

	.  reduce 59 (src line 311)


state 49
	day_or_month:  T_RELATIVE T_MONTHNAME.    (60)

	.  reduce 60 (src line 315)


state 50
	relunit:  T_RELATIVE T_OFFSET.    (73)

	.  reduce 73 (src line 369)


state 51
	relunit:  T_RELATIVE T_DAYS.    (76)

	.  reduce 76 (src line 379)


state 52
	day_or_month:  o_sign_integer T_DAYNAME.    (61)

	.  reduce 61 (src line 319)


state 53
	relunit:  o_sign_integer T_OFFSET.    (72)

	.  reduce 72 (src line 365)


state 54
	relunit:  o_sign_integer T_DAYS.    (75)

	.  reduce 75 (src line 375)


state 55
	relunit:  o_sign_integer T_ISOYD.    (78)

	.  reduce 78 (src line 385)


state 56
	relunit:  o_sign_integer T_ISOHS.    (79)

	.  reduce 79 (src line 392)


state 57
	relunit:  o_sign_integer M.$$80 o_sign_integer W 
	$$80: .    (80)

	.  reduce 80 (src line 395)

	$$80  goto 94

state 58
	relative:  relunits T_AGO.    (69)

	.  reduce 69 (src line 357)


59: shift/reduce conflict (shift 98(0), red'n 94(0)) on T_INTEGER
state 59
	iso_8601_duration:  P ymd_units.o_t_hms_units 
	ymd_units:  ymd_units.ymd_unit 
	o_t_hms_units: .    (94)

	T_INTEGER  shift 98
	T  shift 63
	.  reduce 94 (src line 440)

	o_t_hms_units  goto 95
	t_hms_units  goto 97
	ymd_unit  goto 96

state 60
	iso_8601_duration:  P t_hms_units.    (83)

	.  reduce 83 (src line 405)


state 61
	iso_8601_duration:  P T_INTEGER.W 
	ymd_unit:  T_INTEGER.T_ISOYD 
	ymd_unit:  T_INTEGER.M 

	T_ISOYD  shift 100
	M  shift 101
	W  shift 99
	.  error


state 62
	ymd_units:  ymd_unit.    (85)

	.  reduce 85 (src line 411)


state 63
	t_hms_units:  T.hms_units 

	T_INTEGER  shift 104
	.  error

	hms_units  goto 102
	hms_unit  goto 103

state 64
	o_sign_integer:  T_PLUS T_INTEGER.    (18)

	.  reduce 18 (src line 75)


state 65
	o_sign_integer:  T_MINUS T_INTEGER.    (19)

	.  reduce 19 (src line 79)


state 66
	relunits:  relunit relunits.    (71)

	.  reduce 71 (src line 363)


state 67
	relunit:  o_sign_integer.T_OFFSET 
	relunit:  o_sign_integer.T_DAYS 
	relunit:  o_sign_integer.T_ISOYD 
	relunit:  o_sign_integer.T_ISOHS 
	relunit:  o_sign_integer.M $$80 o_sign_integer W 

	T_DAYS  shift 54
	T_OFFSET  shift 53
	T_ISOYD  shift 55
	T_ISOHS  shift 56
	M  shift 57
	.  error


state 68
	relunit:  T_RELATIVE.T_OFFSET 
	relunit:  T_RELATIVE.T_DAYS 

	T_DAYS  shift 51
	T_OFFSET  shift 50
	.  error


state 69
	relunit:  A T_OFFSET.    (74)

	.  reduce 74 (src line 372)


state 70
	relunit:  A T_DAYS.    (77)

	.  reduce 77 (src line 382)


state 71
	iso_8601_date_time:  iso_8601_date T iso_8601_time.    (55)

	.  reduce 55 (src line 286)


state 72
	iso_8601_time:  T_INTEGER.zone 
	iso_8601_time:  T_INTEGER.: T_INTEGER o_zone 
	iso_8601_time:  T_INTEGER.: T_INTEGER : T_INTEGER o_zone 

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	:  shift 105
	.  error

	sign  goto 42
	zone  goto 32

state 73
	time:  T_INTEGER ampm o_zone.    (37)

	.  reduce 37 (src line 131)


state 74
	o_zone:  zone.    (24)

	.  reduce 24 (src line 104)


state 75
	sign:  T_MINUS.    (16)

	.  reduce 16 (src line 71)


76: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
76: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
76: shift/reduce conflict (shift 39(0), red'n 23(0)) on A
76: shift/reduce conflict (shift 40(0), red'n 23(0)) on P
state 76
	time:  T_INTEGER : T_INTEGER.ampm o_zone 
	time:  T_INTEGER : T_INTEGER.: T_INTEGER ampm o_zone 
	iso_8601_time:  T_INTEGER : T_INTEGER.o_zone 
	iso_8601_time:  T_INTEGER : T_INTEGER.: T_INTEGER o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	A  shift 39
	P  shift 40
	:  shift 107
	.  reduce 23 (src line 102)

	sign  goto 42
	ampm  goto 106
	zone  goto 74
	o_zone  goto 108

state 77
	date:  T_INTEGER / T_INTEGER.    (43)
	date:  T_INTEGER / T_INTEGER./ T_INTEGER 

	/  shift 109
	.  reduce 43 (src line 158)


state 78
	date:  T_INTEGER o_dayqual o_of.T_MONTHNAME 
	date:  T_INTEGER o_dayqual o_of.T_MONTHNAME T_INTEGER 

	T_MONTHNAME  shift 110
	.  error


state 79
	o_of:  of.    (8)

	.  reduce 8 (src line 52)


state 80
	of:  O.F 

	F  shift 111
	.  error


state 81
	date:  T_INTEGER T_MINUS T_MONTHNAME.T_MINUS T_INTEGER 

	T_MINUS  shift 112
	.  error


82: shift/reduce conflict (shift 113(0), red'n 50(0)) on T_MINUS
state 82
	iso_8601_date:  T_INTEGER T_MINUS T_INTEGER.    (50)
	iso_8601_date:  T_INTEGER T_MINUS T_INTEGER.T_MINUS T_INTEGER 

	T_MINUS  shift 113
	.  reduce 50 (src line 238)


state 83
	iso_8601_date:  T_INTEGER T_MINUS W.T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS W.T_INTEGER T_MINUS T_INTEGER 

	T_INTEGER  shift 114
	.  error


state 84
	iso_8601_date:  T_INTEGER W T_INTEGER.    (52)

	.  reduce 52 (src line 266)


85: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
85: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
state 85
	iso_8601_date_time:  T_INTEGER T T_INTEGER.o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	.  reduce 23 (src line 102)

	sign  goto 42
	zone  goto 74
	o_zone  goto 115

state 86
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME.    (62)
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME.of T_MONTHNAME 
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME.of T_INTEGER 
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME.of T_MONTHNAME T_INTEGER 
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME.of T_RELATIVE T_MONTHNAME 

	O  shift 80
	.  reduce 62 (src line 323)

	of  goto 116

state 87
	ampm:  A M.    (11)

	.  reduce 11 (src line 56)


state 88
	ampm:  A ..M . 

	M  shift 117
	.  error


state 89
	ampm:  P M.    (13)

	.  reduce 13 (src line 63)


state 90
	ampm:  P ..M . 

	M  shift 118
	.  error


state 91
	zone:  sign T_INTEGER.    (21)
	zone:  sign T_INTEGER.: T_INTEGER 

	:  shift 119
	.  reduce 21 (src line 87)


state 92
	date:  T_MONTHNAME T_INTEGER o_dayqual.    (46)
	date:  T_MONTHNAME T_INTEGER o_dayqual.comma T_INTEGER 

	,  shift 47
	.  reduce 46 (src line 186)

	comma  goto 120

state 93
	o_dayqual:  T_DAYQUAL.    (10)

	.  reduce 10 (src line 54)


state 94
	relunit:  o_sign_integer M $$80.o_sign_integer W 

	T_INTEGER  shift 28
	T_PLUS  shift 23
	T_MINUS  shift 24
	.  error

	o_sign_integer  goto 121

state 95
	iso_8601_duration:  P ymd_units o_t_hms_units.    (82)

	.  reduce 82 (src line 403)


state 96
	ymd_units:  ymd_units ymd_unit.    (86)

	.  reduce 86 (src line 413)


state 97
	o_t_hms_units:  t_hms_units.    (95)

	.  reduce 95 (src line 442)


state 98
	ymd_unit:  T_INTEGER.T_ISOYD 
	ymd_unit:  T_INTEGER.M 

	T_ISOYD  shift 100
	M  shift 101
	.  error


state 99
	iso_8601_duration:  P T_INTEGER W.    (84)

	.  reduce 84 (src line 406)


state 100
	ymd_unit:  T_INTEGER T_ISOYD.    (87)

	.  reduce 87 (src line 415)


state 101
	ymd_unit:  T_INTEGER M.    (88)

	.  reduce 88 (src line 420)


102: shift/reduce conflict (shift 104(0), red'n 93(0)) on T_INTEGER
state 102
	hms_units:  hms_units.hms_unit 
	t_hms_units:  T hms_units.    (93)

	T_INTEGER  shift 104
	.  reduce 93 (src line 437)

	hms_unit  goto 122

state 103
	hms_units:  hms_unit.    (89)

	.  reduce 89 (src line 424)


state 104
	hms_unit:  T_INTEGER.T_ISOHS 
	hms_unit:  T_INTEGER.M 

	T_ISOHS  shift 123
	M  shift 124
	.  error


state 105
	iso_8601_time:  T_INTEGER :.T_INTEGER o_zone 
	iso_8601_time:  T_INTEGER :.T_INTEGER : T_INTEGER o_zone 

	T_INTEGER  shift 125
	.  error


106: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
106: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
state 106
	time:  T_INTEGER : T_INTEGER ampm.o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	.  reduce 23 (src line 102)

	sign  goto 42
	zone  goto 74
	o_zone  goto 126

state 107
	time:  T_INTEGER : T_INTEGER :.T_INTEGER ampm o_zone 
	iso_8601_time:  T_INTEGER : T_INTEGER :.T_INTEGER o_zone 

	T_INTEGER  shift 127
	.  error


state 108
	iso_8601_time:  T_INTEGER : T_INTEGER o_zone.    (41)

	.  reduce 41 (src line 148)


state 109
	date:  T_INTEGER / T_INTEGER /.T_INTEGER 

	T_INTEGER  shift 128
	.  error


110: shift/reduce conflict (shift 129(0), red'n 45(0)) on T_INTEGER
state 110
	date:  T_INTEGER o_dayqual o_of T_MONTHNAME.    (45)
	date:  T_INTEGER o_dayqual o_of T_MONTHNAME.T_INTEGER 

	T_INTEGER  shift 129
	.  reduce 45 (src line 182)


state 111
	of:  O F.    (6)

	.  reduce 6 (src line 50)


state 112
	date:  T_INTEGER T_MINUS T_MONTHNAME T_MINUS.T_INTEGER 

	T_INTEGER  shift 130
	.  error


state 113
	iso_8601_date:  T_INTEGER T_MINUS T_INTEGER T_MINUS.T_INTEGER 

	T_INTEGER  shift 131
	.  error


114: shift/reduce conflict (shift 132(0), red'n 53(0)) on T_MINUS
state 114
	iso_8601_date:  T_INTEGER T_MINUS W T_INTEGER.    (53)
	iso_8601_date:  T_INTEGER T_MINUS W T_INTEGER.T_MINUS T_INTEGER 

	T_MINUS  shift 132
	.  reduce 53 (src line 276)


state 115
	iso_8601_date_time:  T_INTEGER T T_INTEGER o_zone.    (56)

	.  reduce 56 (src line 288)


state 116
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of.T_MONTHNAME 
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of.T_INTEGER 
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of.T_MONTHNAME T_INTEGER 
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of.T_RELATIVE T_MONTHNAME 

	T_INTEGER  shift 134
	T_MONTHNAME  shift 133
	T_RELATIVE  shift 135
	.  error


state 117
	ampm:  A . M.. 

	.  shift 136
	.  error


state 118
	ampm:  P . M.. 

	.  shift 137
	.  error


state 119
	zone:  sign T_INTEGER :.T_INTEGER 

	T_INTEGER  shift 138
	.  error


state 120
	date:  T_MONTHNAME T_INTEGER o_dayqual comma.T_INTEGER 

	T_INTEGER  shift 139
	.  error


state 121
	relunit:  o_sign_integer M $$80 o_sign_integer.W 

	W  shift 140
	.  error


state 122
	hms_units:  hms_units hms_unit.    (90)

	.  reduce 90 (src line 426)


state 123
	hms_unit:  T_INTEGER T_ISOHS.    (91)

	.  reduce 91 (src line 428)


state 124
	hms_unit:  T_INTEGER M.    (92)

	.  reduce 92 (src line 433)


125: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
125: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
state 125
	iso_8601_time:  T_INTEGER : T_INTEGER.o_zone 
	iso_8601_time:  T_INTEGER : T_INTEGER.: T_INTEGER o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	:  shift 141
	.  reduce 23 (src line 102)

	sign  goto 42
	zone  goto 74
	o_zone  goto 108

state 126
	time:  T_INTEGER : T_INTEGER ampm o_zone.    (38)

	.  reduce 38 (src line 135)


127: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
127: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
127: shift/reduce conflict (shift 39(0), red'n 23(0)) on A
127: shift/reduce conflict (shift 40(0), red'n 23(0)) on P
state 127
	time:  T_INTEGER : T_INTEGER : T_INTEGER.ampm o_zone 
	iso_8601_time:  T_INTEGER : T_INTEGER : T_INTEGER.o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	A  shift 39
	P  shift 40
	.  reduce 23 (src line 102)

	sign  goto 42
	ampm  goto 142
	zone  goto 74
	o_zone  goto 143

state 128
	date:  T_INTEGER / T_INTEGER / T_INTEGER.    (44)

	.  reduce 44 (src line 169)


state 129
	date:  T_INTEGER o_dayqual o_of T_MONTHNAME T_INTEGER.    (47)

	.  reduce 47 (src line 196)


state 130
	date:  T_INTEGER T_MINUS T_MONTHNAME T_MINUS T_INTEGER.    (48)

	.  reduce 48 (src line 209)


state 131
	iso_8601_date:  T_INTEGER T_MINUS T_INTEGER T_MINUS T_INTEGER.    (51)

	.  reduce 51 (src line 253)


state 132
	iso_8601_date:  T_INTEGER T_MINUS W T_INTEGER T_MINUS.T_INTEGER 

	T_INTEGER  shift 144
	.  error


133: shift/reduce conflict (shift 145(0), red'n 63(0)) on T_INTEGER
state 133
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of T_MONTHNAME.    (63)
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of T_MONTHNAME.T_INTEGER 

	T_INTEGER  shift 145
	.  reduce 63 (src line 327)


state 134
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of T_INTEGER.    (64)

	.  reduce 64 (src line 333)


state 135
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of T_RELATIVE.T_MONTHNAME 

	T_MONTHNAME  shift 146
	.  error


state 136
	ampm:  A . M ..    (12)

	.  reduce 12 (src line 60)


state 137
	ampm:  P . M ..    (14)

	.  reduce 14 (src line 66)


state 138
	zone:  sign T_INTEGER : T_INTEGER.    (22)

	.  reduce 22 (src line 98)


state 139
	date:  T_MONTHNAME T_INTEGER o_dayqual comma T_INTEGER.    (49)

	.  reduce 49 (src line 223)


state 140
	relunit:  o_sign_integer M $$80 o_sign_integer W.    (81)

	.  reduce 81 (src line 398)


state 141
	iso_8601_time:  T_INTEGER : T_INTEGER :.T_INTEGER o_zone 

	T_INTEGER  shift 147
	.  error


142: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
142: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
state 142
	time:  T_INTEGER : T_INTEGER : T_INTEGER ampm.o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	.  reduce 23 (src line 102)

	sign  goto 42
	zone  goto 74
	o_zone  goto 148

state 143
	iso_8601_time:  T_INTEGER : T_INTEGER : T_INTEGER o_zone.    (42)

	.  reduce 42 (src line 151)


state 144
	iso_8601_date:  T_INTEGER T_MINUS W T_INTEGER T_MINUS T_INTEGER.    (54)

	.  reduce 54 (src line 280)


state 145
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of T_MONTHNAME T_INTEGER.    (65)

	.  reduce 65 (src line 337)


state 146
	day_or_month:  T_INTEGER T_DAYQUAL T_DAYNAME of T_RELATIVE T_MONTHNAME.    (66)

	.  reduce 66 (src line 343)


147: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
147: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
state 147
	iso_8601_time:  T_INTEGER : T_INTEGER : T_INTEGER.o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	.  reduce 23 (src line 102)

	sign  goto 42
	zone  goto 74
	o_zone  goto 143

state 148
	time:  T_INTEGER : T_INTEGER : T_INTEGER ampm o_zone.    (39)

	.  reduce 39 (src line 138)


29 terminals, 33 nonterminals
97 grammar rules, 149/2000 states
37 shift/reduce, 2 reduce/reduce conflicts reported
82 working sets used
memory: parser 64/30000
7 extra closures
149 shift entries, 7 exceptions
53 goto entries
18 entries saved by goto default
Optimizer space used: output 184/30000
184 table entries, 0 zero
maximum spread: 29, maximum offset: 147
